fix scrollbars for all browsers, exclude Firefox

--- a/source/src/globals.css
+++ b/source/src/globals.css
@@ -255,9 +255,11 @@
         }
 
         /* Firefox */
-        * {
-            scrollbar-width: thin;
-            scrollbar-color: hsl(var(--green-50)) hsl(var(--neutral-0));
+        @-moz-document url-prefix() {
+            * {
+                scrollbar-width: thin;
+                scrollbar-color: hsl(var(--green-50)) hsl(var(--neutral-0));
+            }
         }
     }
 
